# ToyStation

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  ToyStation.sln  build.cake
.github/workflows/: dotnet-desktop.yml  format-check.yml
cmake/: FindFFmpeg.cmake
doc/: MetaArg_Wrap.drawio  Pipeline.drawio  Script.drawio  framework.drawio  framework.eddx  功能梳理.drawio
doc/项目文档/: 包围盒.md  坐标问题.md  渲染设置记录.md  输入HitTest.md  输入事件.md
src/: CMakeLists.txt
src/Client/: README.md  package-lock.json  package.json  vite.config.ts
src/Client/src/: App.vue  main.ts
src/Editor/Editor/: App.axaml  App.axaml.cs  (+3 more)
src/Engine/: CMakeLists.txt
src/Engine/Render/: ImageFactory.cpp  RenderUtils.cpp  Shader.h  VulkanContext.cpp  VulkanContext.h
src/Engine/Scripts/: README.md  package-lock.json  package.json  tsconfig.json
src/Engine/Scripts/content/: firstobj.ts  function.ts  main.ts
src/Engine/Scripts/src/: compiler.ts  engine.ts  entry.ts  loader.ts  service_demo.ts
src/Engine/Scripts/toy/: index.js  package.json  toy.d.ts
src/Engine/Shader/: convert_nv12.comp  convert_nv12.spv  convert_yuv.comp  meshdata.glsl  metallic_roughness_pbr.glsl  outline.frag  outline.vert  pbr_frag.frag  pbr_vertex.vert  postprocess.frag  postprocess.vert  shader.frag  shader.json  shader.vert  shader_config.json  skybox.frag  skybox.vert  specular_gloness_pbr.glsl  text.frag  text.vert  ubo.glsl  vert.spv
src/Engine/Shader/Spv/: comp.spv
src/Engine/Source/: TSEngine.cpp  TSEngine.h  ToyEngine.cpp  ToyEngine.h  ToyEngineSetting.cpp  ToyEngineSetting.h  main.cpp
src/Engine/Source/Base/: Calculagraph.cpp  Calculagraph.h  Container.h  Delegate.h  Global.cpp  Global.h  Logger.h  Macro.h  MessageQueue.cpp  MessageQueue.h  Thread.cpp  Thread.h  Time.cpp  Time.h  Vector.h
src/Engine/Source/Compiler/: ShaderAlias.h  ShaderCompilerSystem.cpp  ShaderCompilerSystem.h
src/Engine/Source/Device/Cuda/: CudaPlatform.cpp  CudaPlatform.h
src/Engine/Source/Device/NvCodec/: NvCodecUtils.h  NvEncoder.cpp  NvEncoderCuda.cpp
src/Engine/Source/Encode/: Encode.cpp  Encode.h  PictureBuffer.cpp  PictureBuffer.h
src/Engine/Source/File/: FileUtil.cpp  FileUtil.h  glTFLoader.cpp  glTFLoader.h
src/Engine/Source/Framework/: BVHTree.cpp  BVHTree.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  EditorController.cpp  EditorController.h  Level.cpp  Level.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  TComponent.h  TObject.cpp  TObject.h  WorldManager.cpp  WorldManager.h
src/Engine/Source/Framework/Component/: MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  TComponent.cpp  TComponent.h  TextComponent.cpp  TextComponent.h
src/Engine/Source/Input/: InputComponent.cpp  InputComponent.h  InputSystem.cpp  InputSystem.h
src/Engine/Source/Meta/: Meta.cpp  Meta.h  MetaArg.h
src/Engine/Source/Reflection/: Meta.cpp  Meta.h
src/Engine/Source/Render/: ConvertPass.cpp  ConvertPass.h  GizmoModel.cpp  GizmoModel.h  Image.cpp  Image.h  ImageFactory.cpp  ImageFactory.h  MainCameraPass.cpp  MainCameraPass.h  PostProcessPass.cpp  PostProcessPass.h  Render.cpp  Render.h  RenderCamera.cpp  RenderCamera.h  RenderContext.cpp  RenderContext.h  RenderDocCapture.cpp  RenderDocCapture.h  RenderFrame.cpp  RenderFrame.h  RenderGlobalData.cpp  RenderGlobalData.h  RenderObject.cpp  RenderObject.h  RenderPassBase.h  RenderPipeline.cpp  RenderPipeline.h  RenderResource.cpp  RenderResource.h  RenderSystem.cpp  RenderSystem.h  RenderUtils.cpp  RenderUtils.h  Shader.cpp  Shader.h  SkyboxPass.h  TextPass.cpp  TextPass.h  (+4 more)
src/Engine/Source/Render/RenderPass/: ConvertPass.cpp  ConvertPass.h  DebugLayerPass.cpp  DebugLayerPass.h  MainCameraPass.cpp  MainCameraPass.h  PostProcessPass.cpp  PostProcessPass.h  RenderPassBase.cpp  RenderPassBase.h  SkyboxPass.cpp  SkyboxPass.h  TextPass.cpp  TextPass.h
src/Engine/Source/Scripts/: ObjectWrapper.cpp  ObjectWrapper.h  ScriptEnv.cpp  ScriptEnv.h  ScriptUtils.cpp  ScriptUtils.h  ScriptsSystem.cpp  ScriptsSystem.h
src/Engine/Source/Transfer/: InputDataChannelObserver.cpp  InputDataChannelObserver.h  RenderAudioSource.cpp  RenderAudioSource.h  RenderVideoSource.cpp  RenderVideoSource.h  SessionCreator.cpp  SessionCreator.h  SignalingMessage.cpp  SignalingMessage.h  TransferSession.cpp  TransferSession.h  TransferSystem.cpp  TransferSystem.h
src/Engine/Source/Transfer/WebRTC/: CudaEncoder.cpp  CudaEncoder.h  NV12CudaBuffer.cpp  NV12CudaBuffer.h  NvencEncoder.cpp  NvencEncoder.h  RTCI420Buffer.cpp  RTCI420Buffer.h  RTCVideoFrameBuffer.cpp  RTCVideoFrameBuffer.h  VideoEncoder.cpp  VideoEncoder.h  VideoEncoderFactory.cpp  VideoEncoderFactory.h  VideoSaver.cpp  VideoSaver.h
src/Engine/Source/Transfer/WebSocket/: WebSocketServer.cpp  WebSocketServer.h
src/Engine/Source/Vulkan/: BufferSubAllocator.cpp  BufferSubAllocator.h  CommandPool.cpp  CommandPool.h  DescriptorSets.cpp  DescriptorSets.h  Helper.h  Images.cpp  Images.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryHandle.cpp  MemoryHandle.h  Pipeline.cpp  Pipeline.h  ResourceAllocator.cpp  ResourceAllocator.h  StagingMemoryManager.cpp  StagingMemoryManager.h  SwapChain.cpp  SwapChain.h  TrangleAllocator.h  VkContext.cpp  VkContext.h  VkHelper.cpp  VkHelper.h  VkImageUtil.cpp  VkImageUtil.h
src/Helper/: CMakeLists.txt  code_extract.cpp  code_extract.h  code_gen.cpp  code_gen.h  global.cpp  global.h  main.cpp
src/Parser/: CMakeLists.txt  ClassCursor.cpp  ClassCursor.h  Cursor.cpp  Cursor.h  Define.h  FileParser.cpp  FileParser.h  Helper.cpp  Helper.h  MacroCursor.cpp  MacroCursor.h  MemberCursor.cpp  MemberCursor.h  ReflectionGenerator.cpp  ReflectionGenerator.h  main.cpp
src/Parser/CSharp/: CSharpGenerator.cpp  CSharpGenerator.h  MetaInfo.cpp  MetaInfo.h
src/Parser/CStyle/: CStyleGenerator.cpp  CStyleGenerator.h  TypeAnalysis.cpp  TypeAnalysis.h  UnitGanerator.cpp  UnitGanerator.h
src/Parser/Formatter/: CodeFormatter.cpp  CodeFormatter.h
test/Engine/: CMakeLists.txt  test.cpp
test/MetaTest/: CMakeLists.txt  Foo.cpp  Foo.h  Gen.cpp  Gen.h  main.cpp
(+30 files in other folders)
