cmake_minimum_required(VERSION 3.19)
project(ToyStation)

set(ASTYLE "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/AStyle")
set(GLM "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/glm-0.9.9.8")
set(LLVM "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/LLVM")
set(STB_IMAGE "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/stb_image")
set(VULKAN "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/Vulkan")
set(SPDLOG "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/spdlog")
set(VK_EXTENSION "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/vk_extension")
set(GTEST "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/googletest")
set(ASIO "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/asio-1.18.2")
set(WEBSOCKETPP "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/websocketpp-0.8.2")
set(FREETYPE "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/freetype-2.13")
set(TINY_GLTF "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/tinygltf-2.8.3")
set(RENDERDOC "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/renderdoc")
set(NVCodec "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/Video_Codec_SDK_12.0.16")
set(KTX "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/KTX-Software")
set(NODEJS "${CMAKE_CURRENT_SOURCE_DIR}/src/ThirdParty/node-v18.16.1")
set(WebRTC110_PATH "E:/WebRTC/webrtc-checkout/src")
find_library(ASTYLE_LIB NAMES AStyleLibd PATHS ${ASTYLE}/lib)
find_library(LIBCLANG_LIB NAMES libclang PATHS ${LLVM}/lib)
find_library(VULKAN_LIB NAMES vulkan-1 PATHS ${VULKAN}/Lib)
find_library(SHADERC_LIB NAMES shaderc_combined PATHS ${VULKAN}/Lib)
find_library(GTEST_LIB NAMES gtestd PATHS ${GTEST}/lib)

find_library(FREETYPE_LIB NAMES freetype PATHS ${FREETYPE}/lib)
find_library(NVCodec_LIB NAMES nvencodeapi PATHS ${NVCodec}/Lib/x64)
find_library(NVCodec_LIB NAMES nvcuvid PATHS ${NVCodec}/Lib/x64)
find_library(KTX_LIB NAMES ktx PATHS ${KTX}/lib)
find_library(NODE_LIB NAMES libnode PATHS ${NODEJS}/lib)


# 设置输出目录要Editor bin目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/out)
# add .cmake folder to module_path for search depends libraries
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")

set(TINYGLTF_HEADER_ONLY ON CACHE INTERNAL "" FORCE)
set(TINYGLTF_INSTALL OFF CACHE INTERNAL "" FORCE)
add_subdirectory(./src/ThirdParty/vk_extension)
#add_subdirectory(./src/Parser)
add_subdirectory(./src/Helper)
add_subdirectory(./src/Engine)
add_subdirectory(./test/MetaTest)
#add_subdirectory(./test/Engine)